commit new changes

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,8 @@ editor_options:
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 <!-- badges: start -->
-[![Status at rOpenSci Software Peer Review](https://badges.ropensci.org/609_status.svg)](https://github.com/ropensci/software-review/issues/609)[![lifecycle](https://img.shields.io/badge/lifecycle-maturing-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html) [![Dependencies](https://tinyverse.netlify.com/badge/baRulho)](https://cran.r-project.org/package=baRulho) [![Project Status: Active The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) [![Licence](https://img.shields.io/badge/https://img.shields.io/badge/licence-GPL--2-blue.svg)](https://www.gnu.org/licenses/gpl-3.0.en.html) [![minimal R version](https://img.shields.io/badge/R%3E%3D-`r strsplit(gsub("depends: R \\(|\\)", "", grep("^DEPENDS", ignore.case = TRUE, readLines(con = "./DESCRIPTION"), value = TRUE), ignore.case = TRUE), ",")[[1]][1]`-6666ff.svg)](https://cran.r-project.org/) [![packageversion](https://img.shields.io/badge/Package%20version-`r gsub("version: |version:", "", grep("^version", ignore.case = TRUE, readLines(con = "./DESCRIPTION"), value = TRUE), ignore.case = TRUE)`-orange.svg?style=flat-square)](commits/develop) [![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master) [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/baRulho)](https://cran.r-project.org/package=baRulho)
+[![Status at rOpenSci Software Peer Review](https://badges.ropensci.org/609_status.svg)](https://github.com/ropensci/software-review/issues/609)[![lifecycle](https://img.shields.io/badge/lifecycle-maturing-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html) [![Dependencies](https://tinyverse.netlify.com/badge/baRulho)](https://cran.r-project.org/package=baRulho) [![Project Status: Active The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active) [![Licence](https://img.shields.io/badge/https://img.shields.io/badge/licence-GPL--2-blue.svg)](https://www.gnu.org/licenses/gpl-3.0.en.html) [![minimal R version](https://img.shields.io/badge/R%3E%3D-`r strsplit(gsub("depends: R \\(|\\)", "", grep("^DEPENDS", ignore.case = TRUE, readLines(con = "./DESCRIPTION"), value = TRUE), ignore.case = TRUE), ",")[[1]][1]`-6666ff.svg)](https://cran.r-project.org/)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/baRulho)](https://cran.r-project.org/package=baRulho)
 [![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/baRulho)](https://cranlogs.r-pkg.org/badges/grand-total/baRulho)
 [![Codecov test coverage](https://codecov.io/gh/ropensci/baRulho/branch/master/graph/badge.svg)](https://app.codecov.io/gh/ropensci/baRulho?branch=master)
 [![R-CMD-check](https://github.com/ropensci/baRulho/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ropensci/baRulho/actions/workflows/R-CMD-check.yaml)
@@ -37,7 +38,7 @@ _Diagram depicting a typical workflow for a experiment working on signal transmi
 
 &nbsp;
 
-[baRulho](https://marce10.github.io/baRulho/) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis.
+[baRulho](https://docs.ropensci.org/baRulho//) offers functions for critical steps in this workflow (those in black, including 'checks') that required acoustic data manipulation and analysis.
 
 The main features of the package are:
 
@@ -47,12 +48,12 @@ The main features of the package are:
  - The use of parallelization to distribute tasks among several cores to improve computational efficiency
 
 
-[baRulho](https://marce10.github.io/baRulho/) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
+[baRulho](https://docs.ropensci.org/baRulho//) builds upon functions and data formats from the [warbleR](https://cran.r-project.org/package=warbleR) and [seewave](https://cran.r-project.org/package=seewave) packages, so some experience with these packages is advised.
 
 Take a look at the vignettes for an overview of the main features of the packages:
 
-- [Align test sounds](https://marce10.github.io/baRulho/articles/align_test_sounds.html)
-- [Quantify degradation](https://marce10.github.io/baRulho/articles/quantify_degradation.html)
+- [Align test sounds](https://docs.ropensci.org/baRulho//articles/align_test_sounds.html)
+- [Quantify degradation](https://docs.ropensci.org/baRulho//articles/quantify_degradation.html)
 
 ## Installing baRulho
 
@@ -67,9 +68,21 @@ Install/load the package from CRAN as follows:
 library(baRulho)
 ```
 
+It can also be install from [R-Universe](https://ropensci.org/blog/2021/06/22/setup-runiverse/) in this way:
+
+```{r}
+install.packages("baRulho", repos = "https://ropensci.r-universe.dev")
+```
+
+
 To install the latest developmental version from [github](https://github.com/) you will need the R package [remotes](https://cran.r-project.org/package=remotes):
 
 ```{r, eval = FALSE}
+
+# install remotes if not installed
+if (!requireNamespace("remotes")) {
+  install.packages("remotes")
+}
 
 # From github
 remotes::install_github("ropensci/baRulho")
@@ -82,12 +95,12 @@ Further system requirements due to the dependency [seewave](https://rug.mnhn.fr/
 
 ## Other packages
 
-The packages [seewave](https://cran.r-project.org/package=seewave) and  [tuneR](https://cran.r-project.org/package=seewave) provide a huge variety of functions for acoustic analysis and manipulation. They mostly work on wave objects already imported into the R environment. The package [warbleR](https://cran.r-project.org/package=warbleR) provides functions to visualize and measure sounds already referenced in annotation tables, similar to [baRulho](https://marce10.github.io/baRulho/). The package [Rraven](https://cran.r-project.org/package=Rraven) facilitates the exchange of data between R and [Raven sound analysis software](https://www.ravensoundsoftware.com/) ([Cornell Lab of Ornithology](https://www.birds.cornell.edu/home)) and can be very helpful for incorporating Raven as the annotating tool into acoustic analysis workflow in R. The package [ohun](https://github.com/ropensci/ohun) works on automated detection of sound events, providing functions to diagnose and optimize detection routines.
+The packages [seewave](https://cran.r-project.org/package=seewave) and  [tuneR](https://cran.r-project.org/package=seewave) provide a huge variety of functions for acoustic analysis and manipulation. They mostly work on wave objects already imported into the R environment. The package [warbleR](https://cran.r-project.org/package=warbleR) provides functions to visualize and measure sounds already referenced in annotation tables, similar to [baRulho](https://docs.ropensci.org/baRulho//). The package [Rraven](https://cran.r-project.org/package=Rraven) facilitates the exchange of data between R and [Raven sound analysis software](https://www.ravensoundsoftware.com/) ([Cornell Lab of Ornithology](https://www.birds.cornell.edu/home)) and can be very helpful for incorporating Raven as the annotating tool into acoustic analysis workflow in R. The package [ohun](https://github.com/ropensci/ohun) works on automated detection of sound events, providing functions to diagnose and optimize detection routines.
 
 
 ## Citation
 
-Please cite [baRulho](https://marce10.github.io/baRulho/) as follows:
+Please cite [baRulho](https://docs.ropensci.org/baRulho//) as follows:
 
 Araya-Salas, M. (2020), *baRulho: quantifying degradation of (animal) acoustic signals in R*. R package version 1.0.0.
 
