--- a/vignettes/align_test_sounds.Rmd
+++ b/vignettes/align_test_sounds.Rmd
@@ -6,10 +6,12 @@ author:
 date:  "`r Sys.Date()`"
 output:
   rmarkdown::html_document:
-  # rmarkdown::html_vignette:
     self_contained: yes
     toc: true
     toc_depth: 3
+    toc_float:
+      collapsed: false
+      smooth_scroll: true
 vignette: >
    %\VignetteIndexEntry{1. Synthesize and align test sounds}
    %\usepackage[utf8]{inputenc}
@@ -57,14 +59,17 @@ registerS3method("knit_print", "data.frame", .print_df)
 
 # global option chunks
 knitr::opts_chunk$set(
-  dpi = 70,
-  fig.width = 8,
-  fig.height = 4,
-  out.width = "100%",
+  fig.width = 5, 
+  fig.height = 3.5,
+  dpi = 40,
+  comment = "",
+  out.width = "80%",
   fig.align = "center",
   message = TRUE,
   warning = TRUE
 )
+
+options(width = 100, max.print = 100)
 
 ```
 
