--- a/vignettes/quantify_degradation.Rmd
+++ b/vignettes/quantify_degradation.Rmd
@@ -6,10 +6,12 @@ author:
 date:  "`r Sys.Date()`"
 output:
   rmarkdown::html_document:
-  # rmarkdown::html_vignette:
     self_contained: yes
     toc: true
     toc_depth: 3
+    toc_float:
+      collapsed: false
+      smooth_scroll: true
 editor_options: 
   chunk_output_type: console
 vignette: >
@@ -61,15 +63,15 @@ library(knitr)
 
 # global option chunks
 knitr::opts_chunk$set(
-  dpi = 70,
-  fig.width = 8,
-  fig.height = 4,
-  out.width = "100%",
+  fig.width = 5, 
+  fig.height = 3.5,
+  dpi = 40,
+  comment = "",
+  out.width = "80%",
   fig.align = "center",
   message = TRUE,
   warning = TRUE
 )
-
 ```
 
 <!-- light brown box -->
